--- a/Project.DataBase.DataAccess/Project.DataBase.DataAccess.csproj
+++ b/Project.DataBase.DataAccess/Project.DataBase.DataAccess.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Devart.Data.PostgreSql.EFCore" Version="8.0.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
